--- a/trunk/dreamote/Dreamote/res/layout/main_tab_host.xml
+++ b/trunk/dreamote/Dreamote/res/layout/main_tab_host.xml
@@ -78,6 +78,14 @@
 	        	android:layout_alignParentBottom="true"
 	        	android:layout_marginBottom="30dip"
 	        />
+	        <Button
+	        	android:id="@+id/btn_toggle_fullscreen"
+	        	android:layout_height="40dip"
+	        	android:layout_width="40dip"
+	        	android:layout_alignParentRight="true"
+	        	android:layout_margin="5dip"
+	        	android:background="@drawable/btn_toggle_fullscreen_selector"
+	        />
 	    </RelativeLayout>
 	    <View 
 	        android:id="@id/media_drawer_handle"
